package baseline;

public class ToDoList {

    public void addList(){
        // User by clicking the "add" button must be able to add a new to-do list
        // create a new array
    }

    public void removeList(){
        // User by clicking the "remove" button must be able to delete the to-do list that it's been displayed
        // remove from the list
    }

    public void EditTitle(){
        // User by clicking the "Edit Title" button must be able to edit the to-do list's title
        // The title will turn to editable mode and saved
        // encounter the string
        // switch with the new input
        // update
    }

    public void SaveList(){
        // User by clicking the "Save" button must be able to save the to-do list
        // As soon as the save button is clicked, there will be a pop/up window saying
            // Select all the to-do lists you will like to save
            // Ask for a user's file location and name for the data that it's going to be saved
        // return a single text file
        //create a file
        // write on the file and close
    }

    public void Display(){
        // User selects from the drop-down menu what wants to be displayed
            // All existing items
            // Complete ones
            // Incomplete ones
        // with if statements choose what to display depending on their option

    }

    public void Progress(){
        // With this feature the user will know how much has been completed
        // for every complete item, and sum of totals will be given
        // create a formula that divides the complete items into the size of the list and returns a double
        // display in percent the value
    }

    public void Color(){
        // With this feature the user will be to select a color for the layout of the to-do list
        // scan for the string given by the hexadecimal value
        // set that color
    }
}
